--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=mailgun-communicator
 server.port=8888
 server.contextPath=/mails
-mailgun.fromEmail.address=Exclusively <servce@myworld.com>
+mailgun.fromEmail.address=
 mailgun.apikey=
-mailgun.mailhost=https://api.mailgun.net/v3/${domain_name}/messages
-mailgun.mail.template.filepath=/tmp/welcome.html
-mailgun.mail.receivers.filepath=/tmp/receivers.csv
+mailgun.mailhost=
+mailgun.mail.template.filepath=/tmp/welcomee.html
+mailgun.mail.receivers.filepath=/tmp/1x+.csv
 mailgun.subject=Welcome to My World
 #Not in use
-mailgun.mail.received.filepath=/tmp/sent.csv
+mailgun.mail.received.filepath=
